--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -389,7 +389,7 @@
   <string name="DocumentView_unnamed_file">Uten navn</string>
   <!--DonateMegaphone-->
   <string name="DonateMegaphone_donate_to_signal">Doner til Signal</string>
-  <string name="DonateMegaphone_not_now">Ikke nå</string>
+  <!-- Removed by excludeNonTranslatables <string name="DonateMegaphone_not_now">Ikke nå</string> -->
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimaliser for manglende Play Tjenester</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Denne enheten støtter ikke Play-tjenester. Trykk én gang for å slå av batterioptimalisering som kan hindre Signal i å motta meldinger når det kjører i bakgrunnen.</string>
