--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -411,6 +411,8 @@
   <string name="DocumentView_unnamed_file">Sennoma dosiero</string>
   <!--DonateMegaphone-->
   <string name="DonateMegaphone_donate_to_signal">Donaci al Signal</string>
+  <string name="DonateMegaphone_donate">Donaci</string>
+  <!-- Removed by excludeNonTranslatables <string name="DonateMegaphone_not_now">Ne nun</string> -->
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimumigi por mankantaj „Play Services“</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Tiu aparato ne subtenas „Play Services“. Tuŝetu por malebligi baterian optimumigon, kiu alie malhelpus al Signal ricevi mesaĝojn dum neaktiva.</string>
@@ -508,6 +510,22 @@
   <plurals name="GroupsV1MigrationSuggestionsDialog_add_members_question">
     <item quantity="one">Ĉu aldoni anon?</item>
     <item quantity="other">Ĉu aldoni anojn?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_these_members_couldnt_be_automatically_added">
+    <item quantity="one">Tiu ĉi ano ne povis re-aldoniĝi al la novtipa grupo, kiam ĝi estis ĝisdatigita:</item>
+    <item quantity="other">Tiuj ĉi anoj ne povis re-aldoniĝi al la novtipa grupo, kiam ĝi estis ĝisdatigita:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members">
+    <item quantity="one">Aldoni anon</item>
+    <item quantity="other">Aldoni anojn</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_failed_to_add_members_try_again_later">
+    <item quantity="one">Aldono de ano malsukcesis. Reprovu poste.</item>
+    <item quantity="other">Aldono de anoj malsukcesis. Reprovu poste.</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_cannot_add_members">
+    <item quantity="one">Ano ne sukcese aldoniĝis.</item>
+    <item quantity="other">Anoj ne sukcese aldoniĝis.</item>
   </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Ĉu forlasi grupon?</string>
@@ -627,6 +645,8 @@
   <string name="ManageGroupActivity_edit_name_and_picture">Modifi nomon kaj bildon</string>
   <string name="ManageGroupActivity_legacy_group">Malnovtipaj grupoj</string>
   <string name="ManageGroupActivity_legacy_group_learn_more">Tiu estas malnovtipa grupo. Ebloj (kiel grupadministrantoj) nur disponeblas en novtipa grupo.</string>
+  <string name="ManageGroupActivity_legacy_group_upgrade">Tiu estas malnovtipa grupo. Por uzi eblojn (kiel grupadministrantojn kaj @menciojn),</string>
+  <string name="ManageGroupActivity_upgrade_this_group">ĝisdatigu tiun ĉi grupon.</string>
   <string name="ManageGroupActivity_this_is_an_insecure_mms_group">Tio estas nesekura MMS-grupo. Por mesaĝi private kaj uzi eblojn kiel grupnomon, invitu viajn kontaktojn al uzo de Signal.</string>
   <string name="ManageGroupActivity_invite_now">Inviti nun</string>
   <!--GroupMentionSettingDialog-->
@@ -862,6 +882,7 @@
   <string name="MessageRecord_you_updated_group">Vi ĝisdatigis la grupon.</string>
   <string name="MessageRecord_the_group_was_updated">La grupo estis ĝisdatigita.</string>
   <string name="MessageRecord_you_called_date">Vi alvokis · %1$s</string>
+  <string name="MessageRecord_missed_audio_call_date">Maltrafita aŭdalvoko · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s ĝisdatigis la grupon.</string>
   <string name="MessageRecord_s_called_you_date">%1$s alvokis vin · %2$s</string>
   <string name="MessageRecord_called_s">Vi alvokis %s</string>
