--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -413,7 +413,9 @@
   <string name="DocumentView_unnamed_file">Izenik gabeko fitxategia</string>
   <!--DonateMegaphone-->
   <string name="DonateMegaphone_donate_to_signal">Signal-i dohaintza eman</string>
-  <string name="DonateMegaphone_not_now">Orain ez</string>
+  <string name="DonateMegaphone_Signal_is_powered_by_people_like_you_show_your_support_today">Signalen indarra zu moduko jendearengandik dator. Erakutsi zure laguntza gaur bertan!</string>
+  <string name="DonateMegaphone_donate">Dohaintza egin</string>
+  <!-- Removed by excludeNonTranslatables <string name="DonateMegaphone_not_now">Orain ez</string> -->
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimizatu Google Play-ren zerbitzuetarko</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Gailu honek ez dauka Play Services erabiltzerik. Signal irekita ez dagoenean, sistemaren bateria optimizazioek galarazten diote mezuak jasotzea. Ukitu sistemaren bateria optimizazioak desaktibatzeko.</string>
@@ -2021,6 +2023,9 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="preferences_setup_a_username">Ezarri erabiltzaile izena</string>
   <string name="configurable_single_select__customize_option">Pertsonalizatu aukera</string>
   <!--Internal only preferences-->
+  <string name="preferences__internal_conversations_and_shortcuts">Solasaldiak eta Lasterbideak</string>
+  <string name="preferences__internal_delete_all_dynamic_shortcuts">Ezabatu lasterbide dinamiko guztiak</string>
+  <string name="preferences__internal_click_to_delete_all_dynamic_shortcuts">Ukitu lasterbide dinamiko guztiak ezabatzeko</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
