--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -412,7 +412,9 @@
   <string name="DocumentView_unnamed_file">فایل بدون نام</string>
   <!--DonateMegaphone-->
   <string name="DonateMegaphone_donate_to_signal">حمایت از Signal</string>
-  <string name="DonateMegaphone_not_now">حالا نه</string>
+  <string name="DonateMegaphone_Signal_is_powered_by_people_like_you_show_your_support_today">Signal با کمک افرادی همانند شما حمایت می‌شود. امروز حمایت خود را نشان دهید!</string>
+  <string name="DonateMegaphone_donate">حمایت کردن</string>
+  <!-- Removed by excludeNonTranslatables <string name="DonateMegaphone_not_now">حالا نه</string> -->
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">بهینه‌سازی به علت ناموجود بودن خدمات Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">این دستگاه از خدمات Play پشتیبانی نمی‌کند. برای غیرفعال کردن بهینه‌سازی باتری سیستم که از دریافت پیام‌ها هنگامی که Signal غیرفعال است ممانعت می‌کند، ضربه بزنید.</string>
@@ -2018,6 +2020,9 @@
   <string name="preferences_setup_a_username">برپایی نام کاربری</string>
   <string name="configurable_single_select__customize_option">سفارشی‌سازی</string>
   <!--Internal only preferences-->
+  <string name="preferences__internal_conversations_and_shortcuts">مکالمه‌ها و میانبرها</string>
+  <string name="preferences__internal_delete_all_dynamic_shortcuts">حذف همهٔ میانبرهای پویا</string>
+  <string name="preferences__internal_click_to_delete_all_dynamic_shortcuts">برای حذف همهٔ میانبرهای پویا کلیک کنید</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
