--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -426,7 +426,9 @@
   <string name="DocumentView_unnamed_file">Bezimena datoteka</string>
   <!--DonateMegaphone-->
   <string name="DonateMegaphone_donate_to_signal">Donirajte Signalu</string>
-  <string name="DonateMegaphone_not_now">Ne sada</string>
+  <string name="DonateMegaphone_Signal_is_powered_by_people_like_you_show_your_support_today">Signal napajaju ljudi poput vas. Pokažite svoju podršku već danas!</string>
+  <string name="DonateMegaphone_donate">Doniraj</string>
+  <!-- Removed by excludeNonTranslatables <string name="DonateMegaphone_not_now">Ne sada</string> -->
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimiziraj za nedostatak Play Services</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Ovaj uređaj ne podržava Play Services. Pritisnite kako biste onemogućili sistemsku optimizaciju baterije koja spriječava Signal da dohvaća poruke dok je uređaj neaktivan.</string>
@@ -2088,6 +2090,9 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   <string name="preferences_setup_a_username">Postavite korisničko ime</string>
   <string name="configurable_single_select__customize_option">Opcija prilagođavanja</string>
   <!--Internal only preferences-->
+  <string name="preferences__internal_conversations_and_shortcuts">Razgovori i prečaci</string>
+  <string name="preferences__internal_delete_all_dynamic_shortcuts">Izbriši sve dinamičke prečace</string>
+  <string name="preferences__internal_click_to_delete_all_dynamic_shortcuts">Pritisnite za brisanje svih dinamičkih prečaca</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
