--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -440,7 +440,9 @@
   <string name="DocumentView_unnamed_file">Bevardis failas</string>
   <!--DonateMegaphone-->
   <string name="DonateMegaphone_donate_to_signal">Paaukokite Signal programėlei</string>
-  <string name="DonateMegaphone_not_now">Ne dabar</string>
+  <string name="DonateMegaphone_Signal_is_powered_by_people_like_you_show_your_support_today">Signal veikia dėka tokių žmonių kaip jūs. Išreikškite savo palaikymą šiandien!</string>
+  <string name="DonateMegaphone_donate">Paaukokite</string>
+  <!-- Removed by excludeNonTranslatables <string name="DonateMegaphone_not_now">Ne dabar</string> -->
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimizuoti trūkstamoms „Play“ paslaugoms</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Šis įrenginys nepalaiko „Play“ paslaugų. Bakstelėkite, norėdami išjungti sistemos baterijos optimizavimus, kurie neleidžia Signal gauti žinučių tol, kol įrenginys yra neaktyvus.</string>
