--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -412,8 +412,9 @@
   <string name="DocumentView_unnamed_file">Arquivo sem nome</string>
   <!--DonateMegaphone-->
   <string name="DonateMegaphone_donate_to_signal">Doar para o Signal</string>
+  <string name="DonateMegaphone_Signal_is_powered_by_people_like_you_show_your_support_today">O Signal é criado por pessoas como você. Mostre o seu apoio hoje!</string>
   <string name="DonateMegaphone_donate">Doar</string>
-  <string name="DonateMegaphone_not_now">Agora não</string>
+  <!-- Removed by excludeNonTranslatables <string name="DonateMegaphone_not_now">Agora não</string> -->
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Otimizar para ausência do Play Services</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Este dispositivo não tem suporte para o Play Services. Clique para desabilitar as otimizações de bateria do sistema que impedem o Signal de receber mensagens enquanto está inativo.</string>
@@ -2021,6 +2022,9 @@
   <string name="preferences_setup_a_username">Definir um nome de usuário</string>
   <string name="configurable_single_select__customize_option">Opção para personalizar</string>
   <!--Internal only preferences-->
+  <string name="preferences__internal_conversations_and_shortcuts">Conversas e atalhos</string>
+  <string name="preferences__internal_delete_all_dynamic_shortcuts">Excluir todos os atalhos dinâmicos</string>
+  <string name="preferences__internal_click_to_delete_all_dynamic_shortcuts">Clique para excluir todos os atalhos dinâmicos</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
